# BJTU-GTD

./: .gitignore  README.md
CommunicationFramework/: README.md
CommunicationFramework/MeiYouCommunicationFramework/: CMakeLists.txt
CommunicationFramework/MeiYouCommunicationFramework/includes/: TaiTaiChat.h  TaiTaiP2PClient.h
CommunicationFramework/MeiYouCommunicationFramework/src/: TaiTaiChat.cpp  TaiTaiP2PClient.cpp
GameEngine/: KekEngine.cmake  Readme.md
GameEngine/KekEngine/includes/: boxAnimations.h  cameraHandler.h  entity.h  graphicHandler.h  livingEntity.h  mediaHandler.h  physics.h  speechSound.h  tilesetHandler.h
GameEngine/KekEngine/src/: boxAnimations.cpp  cameraHandler.cpp  draw.cpp  entity.cpp  graphicHandler.cpp  livingEntity.cpp  mediaHandler.cpp  movementsCamera.cpp  movementsEntities.cpp  physics.cpp  speechSound.cpp  tilesetHandler.cpp
GameEngine/animations/: AnimatedSprite.cpp  AnimatedSprite.hpp
GameEngine/frameclock/: clockHUD.h
MapEditingTool/: CMakeLists.txt  README.md
MapEditingTool/includes/: Entity.h  cameraHandler.h  entity.h  graphicHandler.h  livingEntity.h  mapEditor.h  mediaHandler.h  player.h  tilesetHandler.h
MapEditingTool/media/maps/: base  base~
MapEditingTool/src/: cameraHandler.cpp  entity.cpp  graphicHandler.cpp  livingEntity.cpp  main.cpp  mapEditor.cpp  mediaHandler.cpp  player.cpp  tilesetHandler.cpp
MeiYouCommunicationFramework/: CMakeLists.txt
MeiYouCommunicationFramework/includes/: P2PClient.h  TaiTaiP2PClient.h
MeiYouCommunicationFramework/src/: TaiTaiChat.cpp  TaiTaiP2PClient.cpp  main.cpp
common/animations/: AnimatedSprite.cpp
common/frameclock/: clockHUD.h
common/tiny_file_dialog/: tinyfiledialogs.c  tinyfiledialogs.h
